_cache/v0.18.1/libevent/specs.md
---
title: "libevent"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["2.1.12"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "data-vis-sdk", "e4s", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"aws-ahug": 2, "root": 6, "aws-isc": 2, "aws-ahug-aarch64": 2, "aws-isc-aarch64": 2, "tutorial": 2, "e4s": 1, "data-vis-sdk": 1}}
spec_details: [{"hash": "f7pbofo7a42ztrsblp7lyebcxtskptkx", "compiler": "gcc@=7.3.1", "versions": ["2.1.12"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["+openssl"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/libevent-2.1.12/linux-amzn2-x86_64_v4-gcc-7.3.1-libevent-2.1.12-f7pbofo7a42ztrsblp7lyebcxtskptkx.spack"}, {"hash": "b3lod723xiszmf4pxwes4yxlhwyxcseu", "compiler": "gcc@=7.3.1", "versions": ["2.1.12"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["+openssl"], "stacks": ["root", "aws-ahug-aarch64", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/libevent-2.1.12/linux-amzn2-graviton2-gcc-7.3.1-libevent-2.1.12-b3lod723xiszmf4pxwes4yxlhwyxcseu.spack"}, {"hash": "hvksp7jq6vzqngmclwnffmkrjq5ur2os", "compiler": "gcc@=7.3.1", "versions": ["2.1.12"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["+openssl"], "stacks": ["root", "aws-ahug-aarch64", "aws-isc-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/libevent-2.1.12/linux-amzn2-aarch64-gcc-7.3.1-libevent-2.1.12-hvksp7jq6vzqngmclwnffmkrjq5ur2os.spack"}, {"hash": "d3zwestkqy4rrqicinkxcqkarv2abrkq", "compiler": "gcc@=7.3.1", "versions": ["2.1.12"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["+openssl"], "stacks": ["aws-ahug", "root", "aws-isc"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/libevent-2.1.12/linux-amzn2-x86_64_v3-gcc-7.3.1-libevent-2.1.12-d3zwestkqy4rrqicinkxcqkarv2abrkq.spack"}, {"hash": "hlnkgmrdcycqf65n6vrvoraq4dhddagv", "compiler": "gcc@=7.5.0", "versions": ["2.1.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+openssl"], "stacks": ["root", "tutorial", "e4s", "data-vis-sdk"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/libevent-2.1.12/linux-ubuntu18.04-x86_64-gcc-7.5.0-libevent-2.1.12-hlnkgmrdcycqf65n6vrvoraq4dhddagv.spack"}, {"hash": "vhrgro6boywxpnm6qsmf75n7bcvq6y26", "compiler": "gcc@=8.4.0", "versions": ["2.1.12"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+openssl"], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/libevent-2.1.12/linux-ubuntu18.04-x86_64-gcc-8.4.0-libevent-2.1.12-vhrgro6boywxpnm6qsmf75n7bcvq6y26.spack"}]
---